<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bottom_navigation_view">

    <item
        android:id="@+id/nav_home"
        android:iconTint="@drawable/ic_nav_item_color"
        android:icon="@drawable/img_home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/nav_favourites"
        android:iconTint="@drawable/ic_nav_item_color"
        android:icon="@drawable/img_favourites"
        android:title="@string/favourites_bottom"
        />

    <item
        android:id="@+id/nav_recipe"
        android:iconTint="@drawable/ic_nav_item_color"
        android:icon="@drawable/img_add_recipe"
        android:title="@string/addrecipe_bottom"
        />

    <item
        android:id="@+id/nav_shoppinglist"
        android:iconTint="@drawable/ic_nav_item_color"
        android:icon="@drawable/img_shopping"
        android:title="@string/shoppinglist_bottom"
        />

    <item
        android:id="@+id/nav_notifications"
        android:iconTint="@drawable/ic_nav_item_color"
        android:icon="@drawable/img_notifications"
        android:title="@string/notifications_bottom"
        />
</menu>
