<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LanguageFragment">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingVertical="12dp"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/languageback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
    android:src="@drawable/img_arrow_left"
    android:layout_marginEnd="6dp"   />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginStart="50dp"
    android:src="@drawable/img_langauage"
    android:layout_marginEnd="6dp"   />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
    android:text="@string/language"
    android:fontFamily="@font/inter"
    android:textColor="@color/black"
    android:textSize="18sp"   />
</LinearLayout>

<View
android:id="@+id/divider"
android:layout_width="match_parent"
android:layout_height="1dp"
android:layout_marginTop="8dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:background="#D3D3D3"
    app:layout_constraintTop_toBottomOf="@id/headerLayout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

<LinearLayout
android:layout_width="320dp"
    android:layout_height="180dp"
    android:background="@drawable/ic_lang_border"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="15dp"
    app:layout_constraintTop_toBottomOf="@id/divider"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintVertical_bias="0.075">

<RadioGroup
    android:id="@+id/radioGroup"
  android:layout_width="match_parent"
android:layout_height="180dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical">

<CheckedTextView
android:id="@+id/radio_english"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:fontFamily="@font/inter"
android:padding="15dp"
    android:text="@string/language_english"
    android:textSize="16sp"   />

<View
android:layout_width="match_parent"
android:layout_height="1dp"
android:layout_marginTop="0dp"
android:background="@color/teal" />

<CheckedTextView
android:id="@+id/radio_afrikaans"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:fontFamily="@font/inter"
android:padding="15dp"
    android:text="@string/language_afrikaans"
    android:textSize="16sp"   />

<View
android:layout_width="match_parent"
android:layout_height="1dp"
android:layout_marginTop="0dp"
android:background="@color/teal" />

<CheckedTextView
android:id="@+id/radio_zulu"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:fontFamily="@font/inter"
android:padding="15dp"
    android:text="@string/language_isizulu"
    android:textSize="16sp"  />

    </RadioGroup>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
