<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adamina"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintVertical_bias="0.016" />

    <!-- Description Text -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/discover_and_create_delicious_recipes_with_ease"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <!-- Material SearchView to filter the ingredient list -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawableStart="@drawable/img_search"
            android:drawablePadding="20dp"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Filter Button -->

    <!-- RecyclerView to Display Recipes -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterButton"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="10dp"
        android:drawableEnd="@drawable/baseline_tune_24"
        app:backgroundTint="@color/teal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/searchInputLayout"
        app:layout_constraintTop_toTopOf="@id/searchInputLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/filterButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
